--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    /* background: radial-gradient(circle, rgb(228, 228, 228) 0%, rgba(0, 0, 0, 0.954) 75%); */
+    background: radial-gradient(circle, rgb(255, 255, 255) 0%, rgba(75, 75, 75, 0.954) 100%);
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -7,7 +7,7 @@ body {
     align-items: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: black;
-    background-image: url("../images/codebackground.jpg");
+    /* background-image: url("../images/codebackground.jpg"); */
     background-size: cover;
     background-position: center;
     /* max-width: 75%; */
@@ -18,7 +18,8 @@ body {
 header {
     display: flex;
     flex-direction: row;
-    width: 75%;
+    width: 100vh;
+    max-width: 75%;
     justify-content: center;
     
 }
