--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,15 @@ img {
     width: 100vh;   
 }
 
+.custom-button {
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: rgb(255, 0, 0);
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: medium;
+}
+
 .hide {
     display: none;
 }
