--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ a:hover {
 }
 
 button {
-    width: 35%;
+    /* width: 35%; */
     padding: 10px;
     align-items: center;
     margin: 10px;
@@ -59,6 +59,14 @@ img {
     border: 2px solid black;
     width: 100vh;
     height: 75vh;
+}
+
+.high-score-custom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .high-score-list {
